# sc-cell-state-benchmark

./: .gitignore  ANALYSIS_DECISIONS.md  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_pipeline.sh
.github/: copilot-instructions.md
docs/: IMPLEMENTATION_DECISIONS.md  NEXT_STEPS.md  ROADMAP.md
results/: communication_summary.md  program_scoring_summary.md  project_summary.md
results/tables/: kang_gsea_results.csv
scripts/: 01_download_pbmc3k.py  02_preprocess_pbmc3k.py  03_plot_pbmc3k.py  04_marker_genes.py  05_annotate_clusters.py  06_score_cell_states.py  07_download_kang_pbmc.py  08_preprocess_kang_pbmc.py  09_score_kang_interferon.py  10_score_pathway_programs.py  11_cell_communication.py  12_de_per_cell_type.py  13_gsea_per_cell_type.py  13_pathway_enrichment_per_cell_type.py
src/sc_cell_state_benchmark/: __init__.py  communication.py  config.py  controls.py  data.py  evaluation.py  gene_sets.py  plotting.py  scoring.py
tests/: test_imports.py
